// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-pagination #render should render as expected (1) 1`] = `
<gux-pagination current-page="1" items-per-page="25" layout="advanced" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="1" items-per-page="25" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 25
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer"></div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="40">
          <div class="gux-advanced gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button disabled="" title="First page">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button disabled="" title="Previous page">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <button aria-label="Page 1 selected" class="gux-pagination-buttons-list-current">
                1
              </button>
              <button aria-label="Page 2" class="gux-pagination-buttons-list-target">
                2
              </button>
              <button aria-label="Page 3" class="gux-pagination-buttons-list-target">
                3
              </button>
              <button aria-label="Page 4" class="gux-pagination-buttons-list-target">
                4
              </button>
              <button aria-label="Page 5" class="gux-pagination-buttons-list-target">
                5
              </button>
              <gux-pagination-ellipsis-button totalpages="40"></gux-pagination-ellipsis-button>
              <button aria-label="Page 40" class="gux-pagination-buttons-list-target">
                40
              </button>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next page">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last page">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (2) 1`] = `
<gux-pagination current-page="1" items-per-page="50" layout="advanced" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="1" items-per-page="50" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 50
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer"></div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="20">
          <div class="gux-advanced gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button disabled="" title="First page">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button disabled="" title="Previous page">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <button aria-label="Page 1 selected" class="gux-pagination-buttons-list-current">
                1
              </button>
              <button aria-label="Page 2" class="gux-pagination-buttons-list-target">
                2
              </button>
              <button aria-label="Page 3" class="gux-pagination-buttons-list-target">
                3
              </button>
              <button aria-label="Page 4" class="gux-pagination-buttons-list-target">
                4
              </button>
              <button aria-label="Page 5" class="gux-pagination-buttons-list-target">
                5
              </button>
              <gux-pagination-ellipsis-button totalpages="20"></gux-pagination-ellipsis-button>
              <button aria-label="Page 20" class="gux-pagination-buttons-list-target">
                20
              </button>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next page">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last page">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (3) 1`] = `
<gux-pagination current-page="1" items-per-page="75" layout="advanced" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="1" items-per-page="75" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 75
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer"></div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="14">
          <div class="gux-advanced gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button disabled="" title="First page">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button disabled="" title="Previous page">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <button aria-label="Page 1 selected" class="gux-pagination-buttons-list-current">
                1
              </button>
              <button aria-label="Page 2" class="gux-pagination-buttons-list-target">
                2
              </button>
              <button aria-label="Page 3" class="gux-pagination-buttons-list-target">
                3
              </button>
              <button aria-label="Page 4" class="gux-pagination-buttons-list-target">
                4
              </button>
              <button aria-label="Page 5" class="gux-pagination-buttons-list-target">
                5
              </button>
              <gux-pagination-ellipsis-button totalpages="14"></gux-pagination-ellipsis-button>
              <button aria-label="Page 14" class="gux-pagination-buttons-list-target">
                14
              </button>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next page">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last page">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (4) 1`] = `
<gux-pagination current-page="1" items-per-page="100" layout="advanced" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="1" items-per-page="100" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 100
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer"></div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="10">
          <div class="gux-advanced gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button disabled="" title="First page">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button disabled="" title="Previous page">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <button aria-label="Page 1 selected" class="gux-pagination-buttons-list-current">
                1
              </button>
              <button aria-label="Page 2" class="gux-pagination-buttons-list-target">
                2
              </button>
              <button aria-label="Page 3" class="gux-pagination-buttons-list-target">
                3
              </button>
              <button aria-label="Page 4" class="gux-pagination-buttons-list-target">
                4
              </button>
              <button aria-label="Page 5" class="gux-pagination-buttons-list-target">
                5
              </button>
              <gux-pagination-ellipsis-button totalpages="10"></gux-pagination-ellipsis-button>
              <button aria-label="Page 10" class="gux-pagination-buttons-list-target">
                10
              </button>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next page">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last page">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (5) 1`] = `
<gux-pagination current-page="1" items-per-page="25" layout="advanced" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="1" items-per-page="25" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 25
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer"></div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="40">
          <div class="gux-advanced gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button disabled="" title="First page">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button disabled="" title="Previous page">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <button aria-label="Page 1 selected" class="gux-pagination-buttons-list-current">
                1
              </button>
              <button aria-label="Page 2" class="gux-pagination-buttons-list-target">
                2
              </button>
              <button aria-label="Page 3" class="gux-pagination-buttons-list-target">
                3
              </button>
              <button aria-label="Page 4" class="gux-pagination-buttons-list-target">
                4
              </button>
              <button aria-label="Page 5" class="gux-pagination-buttons-list-target">
                5
              </button>
              <gux-pagination-ellipsis-button totalpages="40"></gux-pagination-ellipsis-button>
              <button aria-label="Page 40" class="gux-pagination-buttons-list-target">
                40
              </button>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next page">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last page">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (6) 1`] = `
<gux-pagination current-page="10" items-per-page="25" layout="advanced" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="10" items-per-page="25" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              226 - 250
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer"></div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="10" total-pages="40">
          <div class="gux-advanced gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="First page">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Previous page">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <button aria-label="Page 1" class="gux-pagination-buttons-list-target">
                1
              </button>
              <gux-pagination-ellipsis-button totalpages="40"></gux-pagination-ellipsis-button>
              <button aria-label="Page 9" class="gux-pagination-buttons-list-target">
                9
              </button>
              <button aria-label="Page 10 selected" class="gux-pagination-buttons-list-current">
                10
              </button>
              <button aria-label="Page 11" class="gux-pagination-buttons-list-target">
                11
              </button>
              <gux-pagination-ellipsis-button totalpages="40"></gux-pagination-ellipsis-button>
              <button aria-label="Page 40" class="gux-pagination-buttons-list-target">
                40
              </button>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next page">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last page">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (7) 1`] = `
<gux-pagination current-page="10" items-per-page="50" layout="advanced" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="10" items-per-page="50" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              451 - 500
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer"></div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="10" total-pages="20">
          <div class="gux-advanced gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="First page">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Previous page">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <button aria-label="Page 1" class="gux-pagination-buttons-list-target">
                1
              </button>
              <gux-pagination-ellipsis-button totalpages="20"></gux-pagination-ellipsis-button>
              <button aria-label="Page 9" class="gux-pagination-buttons-list-target">
                9
              </button>
              <button aria-label="Page 10 selected" class="gux-pagination-buttons-list-current">
                10
              </button>
              <button aria-label="Page 11" class="gux-pagination-buttons-list-target">
                11
              </button>
              <gux-pagination-ellipsis-button totalpages="20"></gux-pagination-ellipsis-button>
              <button aria-label="Page 20" class="gux-pagination-buttons-list-target">
                20
              </button>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next page">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last page">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (8) 1`] = `
<gux-pagination current-page="10" items-per-page="75" layout="advanced" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="10" items-per-page="75" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              676 - 750
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer"></div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="10" total-pages="14">
          <div class="gux-advanced gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="First page">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Previous page">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <button aria-label="Page 1" class="gux-pagination-buttons-list-target">
                1
              </button>
              <gux-pagination-ellipsis-button totalpages="14"></gux-pagination-ellipsis-button>
              <button aria-label="Page 9" class="gux-pagination-buttons-list-target">
                9
              </button>
              <button aria-label="Page 10 selected" class="gux-pagination-buttons-list-current">
                10
              </button>
              <button aria-label="Page 11" class="gux-pagination-buttons-list-target">
                11
              </button>
              <gux-pagination-ellipsis-button totalpages="14"></gux-pagination-ellipsis-button>
              <button aria-label="Page 14" class="gux-pagination-buttons-list-target">
                14
              </button>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next page">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last page">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (9) 1`] = `
<gux-pagination current-page="10" items-per-page="100" layout="advanced" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="10" items-per-page="100" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              901 - 1,000
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer"></div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="10" total-pages="10">
          <div class="gux-advanced gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="First page">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Previous page">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <button aria-label="Page 1" class="gux-pagination-buttons-list-target">
                1
              </button>
              <gux-pagination-ellipsis-button totalpages="10"></gux-pagination-ellipsis-button>
              <button aria-label="Page 6" class="gux-pagination-buttons-list-target">
                6
              </button>
              <button aria-label="Page 7" class="gux-pagination-buttons-list-target">
                7
              </button>
              <button aria-label="Page 8" class="gux-pagination-buttons-list-target">
                8
              </button>
              <button aria-label="Page 9" class="gux-pagination-buttons-list-target">
                9
              </button>
              <button aria-label="Page 10 selected" class="gux-pagination-buttons-list-current">
                10
              </button>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button disabled="" title="Next page">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button disabled="" title="Last page">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (10) 1`] = `
<gux-pagination current-page="1" items-per-page="25" layout="simple" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="1" items-per-page="25" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 25
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer"></div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="40">
          <div class="gux-advanced gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button disabled="" title="First page">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button disabled="" title="Previous page">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <button aria-label="Page 1 selected" class="gux-pagination-buttons-list-current">
                1
              </button>
              <button aria-label="Page 2" class="gux-pagination-buttons-list-target">
                2
              </button>
              <button aria-label="Page 3" class="gux-pagination-buttons-list-target">
                3
              </button>
              <button aria-label="Page 4" class="gux-pagination-buttons-list-target">
                4
              </button>
              <button aria-label="Page 5" class="gux-pagination-buttons-list-target">
                5
              </button>
              <gux-pagination-ellipsis-button totalpages="40"></gux-pagination-ellipsis-button>
              <button aria-label="Page 40" class="gux-pagination-buttons-list-target">
                40
              </button>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next page">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last page">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (11) 1`] = `
<gux-pagination current-page="-3" items-per-page="25" layout="advanced" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="1" items-per-page="25" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 25
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer"></div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="40">
          <div class="gux-advanced gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button disabled="" title="First page">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button disabled="" title="Previous page">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <button aria-label="Page 1 selected" class="gux-pagination-buttons-list-current">
                1
              </button>
              <button aria-label="Page 2" class="gux-pagination-buttons-list-target">
                2
              </button>
              <button aria-label="Page 3" class="gux-pagination-buttons-list-target">
                3
              </button>
              <button aria-label="Page 4" class="gux-pagination-buttons-list-target">
                4
              </button>
              <button aria-label="Page 5" class="gux-pagination-buttons-list-target">
                5
              </button>
              <gux-pagination-ellipsis-button totalpages="40"></gux-pagination-ellipsis-button>
              <button aria-label="Page 40" class="gux-pagination-buttons-list-target">
                40
              </button>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button title="Next page">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button title="Last page">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (12) 1`] = `
<gux-pagination current-page="-3" items-per-page="25" layout="advanced" total-items="0">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="1" items-per-page="25" total-items="0">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              0 - 0
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer"></div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="1">
          <div class="gux-advanced gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button disabled="" title="First page">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button disabled="" title="Previous page">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <button aria-label="Page 1 selected" class="gux-pagination-buttons-list-current">
                1
              </button>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button disabled="" title="Next page">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button disabled="" title="Last page">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render current page as 1 when total items is 0 1`] = `
<gux-pagination current-page="1" items-per-page="25" layout="full" total-items="0">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="1" items-per-page="25" total-items="0">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              0 - 0
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer"></div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="1">
          <div class="gux-advanced gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button disabled="" title="First page">
                  <gux-icon decorative="" icon-name="fa/chevrons-left-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button disabled="" title="Previous page">
                  <gux-icon decorative="" icon-name="custom/chevron-left-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <button aria-label="Page 1 selected" class="gux-pagination-buttons-list-current">
                1
              </button>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost">
                <button disabled="" title="Next page">
                  <gux-icon decorative="" icon-name="custom/chevron-right-small-regular"></gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button disabled="" title="Last page">
                  <gux-icon decorative="" icon-name="fa/chevrons-right-regular"></gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;
